# eraserhead

./: .bash_aliases_eraserhead  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  DEVELOPMENT-PLAN.md  LICENSE  LOCAL-INFERENCE-GUIDE.md  MODEL-EVALUATION.md  PHASE-0-COMPLETE.md  PHASE-1-WEEK3-COMPLETE.md  QUALITY-CHECKLIST.md  README.md  SECURITY-REVIEW-CRYPTO.md  TINYCLAW.md  docker-compose.yml  model-config.yml  pyproject.toml  tinyclaw-config-1.5b.json5  tinyclaw-config.example.json5
.github/: copilot-instructions.md
.specify/memory/: constitution.md
agents/: harold-documenter.yml  harold-implementer.yml  harold-planner.yml  harold-researcher.yml  harold-security.yml  harold-tester.yml
containers/github-publisher/: Containerfile  entrypoint.sh
docs/: adapter-development.md  api-reference.md  tinyclaw-setup.md  user-guide.md
docs/memes/harold/: MEME-GALLERY.md  emoji-reference.md
model-evaluation-results/: 0.5b-evaluation.json  0.5b-generated.py  1.5b-evaluation.json  1.5b-generated.py  comparison.md
scripts/: convert-emoji.py  download-models.sh  evaluate-models.py  evaluate-models.sh  fetch-harold-emoji.py  fetch-harold-memes.py  format.sh  implement_forward_secrecy.py  lint.sh  llm-start-cpu.sh  llm-start-gpu.sh  llm-start.sh  model-health.sh  pre-commit.sh  publish-gh.sh  quality-check.sh  security-scan.sh  setup-validate.sh  strip-emoji.py  sync-memory.sh  test-model-basic.py  test.sh
specs/001-anemochory-protocol/: ADR-001-crypto-selection.md  ADR-002-packet-format.md  ADR-003-key-rotation.md  ADR-004-master-key-storage.md  research.md  spec.md
specs/002-scrubbing-engine/: adr-005-scrubbing-architecture.md  spec.md
specs/003-agent-architecture/: spec.md
src/anemochory/: __init__.py  client.py  crypto.py  crypto_forward_secrecy.py  crypto_key_rotation.py  crypto_key_storage.py  crypto_memory.py  crypto_replay.py  models.py  node.py  packet.py  routing.py  session.py  transport.py
src/eraserhead/: __init__.py  cli.py  engine.py  models.py  queue.py  vault.py  verification.py
src/eraserhead/adapters/: __init__.py  platforms.py
src/eraserhead/modes/: __init__.py  base.py  confirmation.py  containment.py  target_validation.py
src/eraserhead/providers/: __init__.py  base.py  compliance.py  orchestrator.py  registry.py
src/eraserhead/providers/search/: __init__.py  providers.py
tests/: conftest.py  test_adapters.py  test_adapters_extended.py  test_cli.py  test_client.py  test_compliance.py  test_edge_cases.py  test_engine.py  test_integration.py  test_models.py  test_modes.py  test_node.py  test_orchestrator.py  test_providers.py  test_queue.py  test_registry_extended.py  test_routing.py  test_scrub_integration.py  test_scrub_models.py  test_search_providers.py  test_transport.py  test_transport_extended.py  test_transport_server.py  test_vault.py  test_verification.py  test_verification_extended.py
tests/anemochory/: __init__.py  test_crypto.py  test_crypto_forward_secrecy.py  test_crypto_key_rotation.py  test_crypto_key_storage.py  test_crypto_memory.py  test_crypto_memory_coverage.py  test_crypto_replay.py  test_packet.py  test_security_adversarial.py  test_session.py
